added some more passport js logic

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,37 +18,17 @@
 
 
 
-  <div ng-controller = 'ElizaCtrl'  class="container">
-        
-    
+  <div ng-controller = 'LoginCtrl'  class="container">
 
-    <div id= "center">
-      <div id="response_box">
-
-        <ul ng-repeat="response in responses">
-          <li> {{response}} </li>
-        </ul>
-
-      </div>
-      <div id= "eliza_input" class="formField">
-
-
-          <form id="form" onsubmit="return false">
-            <input type = "text" name = "first_name" ng-model="human" ng-disabled="loaded" /><button ng-click= "elizaResponse()" color=" #4267B2" class="btn btn-default" id="message" type="button">Submit </button>
-          </form>
-
-          <button ng-click = "login()">Login</button>
-          <button ng-click= "getConvos()">Get Convos</button>
-          <button ng-click= " listConvos()">List Convos</button>
-          <br>
-          <ul ng-repeat="conv in convo_list">
-            <li> Convo ID:  {{conv.id}}                   Date: {{conv.date}}</li>
-          </ul>
-      </div>
-
-      <button ng-click = "printCookies()">Cookies </button>
-    <div>
-
+    <div class="wrapper">
+      <form class="form-signin" ng-submit= 'submitLogin()'>       
+        <h2 class="form-signin-heading">Please login</h2>
+        <input type="text" class="form-control" name="username" placeholder="Enter Username" ng-model = credentials.username />
+        <input type="password" class="form-control" name="password" placeholder="Password" ng-model = credentials.password/>      
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>   
+    </form>
+  </div>
+      
 
 
 
