--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -1,37 +1,51 @@
-#center{
-    border-radius: 25px;
-    border: 2px solid ;
-    padding: 20px; 
-    width: 800px;
-    height: 600px; 
-    margin: 0 auto;
-    background-color: #F5F5DC;
-}
-#eliza_input{
-   /*display: none;*/
+@import "bourbon";
 
-}
-#response_box{
-   width: 600px;
-   height: 400px;
-   border-radius: 25px;
-   border: 2px solid #4267B2;
-   margin:0 auto;
-   margin-top:45px;
-   position:relative;
-   background-color:white;
-   overflow-y:auto;
+body {
+  background: #eee !important;  
 }
 
-.formField{
-    width: 800px;
-	height:auto;
-    position:relative;
-    margin-left:10%;
+.wrapper {  
+  margin-top: 80px;
+  margin-bottom: 80px;
+}
+
+.form-signin {
+  max-width: 380px;
+  padding: 15px 35px 45px;
+  margin: 0 auto;
+  background-color: #fff;
+  border: 1px solid rgba(0,0,0,0.1);  
+
+  .form-signin-heading,
+  .checkbox {
+    margin-bottom: 30px;
+  }
+
+  .checkbox {
+    font-weight: normal;
+  }
+
+  .form-control {
+    position: relative;
+    font-size: 16px;
+    height: auto;
     padding: 10px;
+    @include box-sizing(border-box);
 
-}
-input{
-	width:550px;
-	margin-top:0px;
+    &:focus {
+      z-index: 2;
+    }
+  }
+
+  input[type="text"] {
+    margin-bottom: -1px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+
+  input[type="password"] {
+    margin-bottom: 20px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
 }
