--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
 <!-- jQuery library -->
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script src="../javascripts/angularApp.js"></script>
-      <script src="../javascripts/controllers/ElizaCtrl.js"></script>
+      <script src="../javascripts/controllers/LoginCtrl.js"></script>
       <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css"> 
     <title>Eliza</title>
   </head>
@@ -21,15 +21,15 @@
   <div ng-controller = 'LoginCtrl'  class="container">
 
     <div class="wrapper">
-      <form class="form-signin" ng-submit= 'submitLogin()'>       
+      <form class="form-signin">       
         <h2 class="form-signin-heading">Please login</h2>
         <input type="text" class="form-control" name="username" placeholder="Enter Username" ng-model = credentials.username />
-        <input type="password" class="form-control" name="password" placeholder="Password" ng-model = credentials.password/>      
-      <button class="btn btn-lg btn-primary btn-block" type="submit">Login</button>   
+        <input type="password" class="form-control" name="password" placeholder="Password" ng-model = credentials.password />      
+      <button class="btn btn-lg btn-primary btn-block" type="button" ng-click='submitLogin()'>Login</button>   
     </form>
   </div>
       
-
+<button ng-click= 'viewLoggedInUser()'>CHECK </button>
 
 
   </div>
