--- a/views/tweet.ejs
+++ b/views/tweet.ejs
@@ -15,5 +15,5 @@
 
     <div class="form-signin">
       <h1 class="form-signin-heading" > {{ username }} </h1>
-      <p> PUT YOUR CONTENT HERE </p>
+      <p> {{content}} </p>
       </div>
