--- a/views/search.ejs
+++ b/views/search.ejs
@@ -31,7 +31,7 @@
   </div>
     <table class="table table-striped table-bordered">
 	  <tr ng-repeat="x in tweets">
-		<td>{{x.timestamp | date:'MM-dd-yyyy'}}</td>
+		<td>{{(x.timestamp * 1000) | date:'MM-dd-yyyy h:mm:ss a'}}</td>
 		<td>{{x.username}}</td>
 		<td>{{x.content}}</td>
 	  </tr> 
