--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,18 +4,28 @@
     <meta charset="utf-8">
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
       <script src="https://code.angularjs.org/1.5.5/angular-cookies.min.js"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular-route.js""></script>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+      <link rel="stylesheet" type="text/css" href="../stylesheets/stylesheet.css"> 
+
+       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script src="javascripts/angularApp.js"></script>
-      <script src="javascripts/controllers/HomeCtrl.js"></script>
-    <title></title>
+      <script src="javascripts/controllers/AddItemCtrl.js"></script>
+      <script src="javascripts/controllers/LoginCtrl.js"></script>
+      <script src="javascripts/controllers/RegisterCtrl.js"></script>
+      <script src="javascripts/controllers/VerifyCtrl.js"></script>
+      <script src="javascripts/controllers/FollowersCtrl.js"></script>
+      <script src="javascripts/controllers/SearchCtrl.js"></script>
+      <script src="javascripts/controllers/TweetCtrl.js"></script>
+
+    <title>Cloud Twitter</title>
   </head>
-  <body ng-app="appApp">
-  <div>
-  <h1>MAIN</h1>
-  </div>
-  <div ng-controller = 'HomeCtrl'>
-          <ul ng-repeat="post in posts">
-            <li ng-show= "display">{{post}}</li>
-          </ul>
+  <body ng-app="twitterApp">
+
+  <nav class="navbar navbar-default navbar-fixed-top">
+  <div ng-include="'nav'"></div>
+</nav>
+  <div ng-view>
   </div>
 </body>
 </html>
