--- a/views/nav.ejs
+++ b/views/nav.ejs
@@ -1,41 +1,23 @@
-  <div class="container-fluid">
+<div class="container-fluid"style="background-color: deepskyblue">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
+    <div class="navbar-header" >
       <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">BluWay</a>
+      <a class="navbar-left" style=color:white href="#/">Cloud Twitter</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Browse <span class="caret"></span></a>
-          <ul id="large" class="dropdown-menu list-inline">
-            <li><a ui-sref=".home">Comedy</a></li>
-            <li><a href="#">Drama</a></li>
-            <li><a href="#">Romance</a></li>
-            <li><a href="#">Horror</a></li>
-            <li><a href="#">Adventure</a></li>
-            <li role="separator" class="divider"></li>
-          </ul>
-        </li>
-        <li><a href="#/movieView/1">Manage Queue</a></li>
+        <li><a href="#/search" style=color:white >Search</a></li>
+        <li><a href="#/additem">Add Item</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Your Account</a></li>
-            <li><a href="#">Help Center</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Sign Out</a></li>
-          </ul>
-        </li>
+        <li><a href="#/login">Login</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
