--- a/views/tweet.ejs
+++ b/views/tweet.ejs
@@ -1,19 +1,8 @@
-
-
-
-<head>
-
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
-<!-- jQuery library -->
- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<link rel="stylesheet" type="text/css" href="../public/stylesheets/stylesheet.css"> 
-
-</head>
-
-
-
+<div class="wrapper">
     <div class="form-signin">
-      <h1 class="form-signin-heading" > {{ username }} </h1>
-      <p> {{content}} </p>
+      <h1 class="form-signin-heading" > {{ tweet.username }} </h1>
+      <p> {{tweet.content}} </p>
+      <div ng-show ="tweet.media.length > 0"> {{tweet.media[0]}}</div>
+      <button ng-click="likeTweet()">Like Tweet</button>
       </div>
+</div>
